# Trabalho-GGI

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/academic/: customer_genre_profile_week.csv  daily_sales_month.csv  store_access_shift_week.csv
data/context/: hardware_cost_pressure.csv  piracy_pressure.csv  platform_shift.csv  windows_friction.csv
data/monitoring/: ccu_snapshots.csv
data/processed/: monitor_candidates.csv
output/: steam_decision_report.md
scripts/: collect_ccu.py  generate_academic_data.py  generate_report.py  prepare_dataset.py
src/steam_dashboard/: __init__.py  academic.py  collector.py  context_sources.py  dashboard.py  data_utils.py  insights.py  paths.py  reporting.py  transform.py
tests/: test_academic.py  test_collector.py  test_data_utils.py  test_transform.py
