[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-decision-dashboard"
version = "0.1.0"
description = "Dashboard academico em Python para analise operacional, gerencial e estrategica de jogos da Steam."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2,<3.0",
    "plotly>=6.0,<7.0",
    "pyarrow>=18.0,<20.0",
    "requests>=2.32,<3.0",
    "streamlit>=1.43,<2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
